# CharLS

./: .travis.yml  CMakeLists.txt  CharLS.vcproj  README.md  defaulttraits.h  encoderstrategy.h  header.cpp
cmake/: FindCharLS.cmake
cmake-modules/: CheckCXX11Features.cmake  c++11-test-all_of.cpp  c++11-test-any_of.cpp  c++11-test-initializer_list.cpp  c++11-test-none_of.cpp  c++11-test-range-based_for.cpp  c++11-test-std_array.cpp  c++11-test-unique_ptr.cpp
plainc/: plainc.c
